@@ -6614,21 +6614,22 @@ name|providerUriStr
 init|=
 name|conf
 operator|.
-name|get
+name|getTrimmed
 argument_list|(
 name|DFSConfigKeys
 operator|.
 name|DFS_ENCRYPTION_KEY_PROVIDER_URI
 argument_list|,
-literal|null
+literal|""
 argument_list|)
 decl_stmt|;
 comment|// No provider set in conf
 if|if
 condition|(
 name|providerUriStr
-operator|==
-literal|null
+operator|.
+name|isEmpty
+argument_list|()
 condition|)
 block|{
 return|return
@@ -6824,6 +6825,34 @@ literal|2
 argument_list|,
 literal|512
 argument_list|)
+return|;
+block|}
+comment|/**    * Probe for HDFS Encryption being enabled; this uses the value of    * the option {@link DFSConfigKeys.DFS_ENCRYPTION_KEY_PROVIDER_URI},    * returning true if that property contains a non-empty, non-whitespace    * string.    * @param conf configuration to probe    * @return true if encryption is considered enabled.    */
+DECL|method|isHDFSEncryptionEnabled (Configuration conf)
+specifier|public
+specifier|static
+name|boolean
+name|isHDFSEncryptionEnabled
+parameter_list|(
+name|Configuration
+name|conf
+parameter_list|)
+block|{
+return|return
+operator|!
+name|conf
+operator|.
+name|getTrimmed
+argument_list|(
+name|DFSConfigKeys
+operator|.
+name|DFS_ENCRYPTION_KEY_PROVIDER_URI
+argument_list|,
+literal|""
+argument_list|)
+operator|.
+name|isEmpty
+argument_list|()
 return|;
 block|}
 block|}
