@@ -5671,6 +5671,116 @@ name|ignored
 parameter_list|)
 block|{     }
 block|}
+annotation|@
+name|Test
+DECL|method|testEncryptionProbe ()
+specifier|public
+name|void
+name|testEncryptionProbe
+parameter_list|()
+throws|throws
+name|Throwable
+block|{
+name|Configuration
+name|conf
+init|=
+operator|new
+name|Configuration
+argument_list|(
+literal|false
+argument_list|)
+decl_stmt|;
+name|conf
+operator|.
+name|unset
+argument_list|(
+name|DFSConfigKeys
+operator|.
+name|DFS_ENCRYPTION_KEY_PROVIDER_URI
+argument_list|)
+expr_stmt|;
+name|assertFalse
+argument_list|(
+literal|"encryption enabled on no provider key"
+argument_list|,
+name|DFSUtil
+operator|.
+name|isHDFSEncryptionEnabled
+argument_list|(
+name|conf
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|conf
+operator|.
+name|set
+argument_list|(
+name|DFSConfigKeys
+operator|.
+name|DFS_ENCRYPTION_KEY_PROVIDER_URI
+argument_list|,
+literal|""
+argument_list|)
+expr_stmt|;
+name|assertFalse
+argument_list|(
+literal|"encryption enabled on empty provider key"
+argument_list|,
+name|DFSUtil
+operator|.
+name|isHDFSEncryptionEnabled
+argument_list|(
+name|conf
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|conf
+operator|.
+name|set
+argument_list|(
+name|DFSConfigKeys
+operator|.
+name|DFS_ENCRYPTION_KEY_PROVIDER_URI
+argument_list|,
+literal|"\n\t\n"
+argument_list|)
+expr_stmt|;
+name|assertFalse
+argument_list|(
+literal|"encryption enabled on whitespace provider key"
+argument_list|,
+name|DFSUtil
+operator|.
+name|isHDFSEncryptionEnabled
+argument_list|(
+name|conf
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|conf
+operator|.
+name|set
+argument_list|(
+name|DFSConfigKeys
+operator|.
+name|DFS_ENCRYPTION_KEY_PROVIDER_URI
+argument_list|,
+literal|"http://hadoop.apache.org"
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+literal|"encryption disabled on valid provider key"
+argument_list|,
+name|DFSUtil
+operator|.
+name|isHDFSEncryptionEnabled
+argument_list|(
+name|conf
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 end_class
 
